# base

./: .gitignore  .gitmodules  .root  README.md  package.json
abc/: package.json  typings.d.ts
abd/: package.json  typings.d.ts
admin-ui/: index.js  package.json  tsconfig.json  vue.config.js
android/libraries/augmented-reality-core/app/: CMakeLists.txt  build.gradle
android/libraries/augmented-reality-core/app/src/androidTest/java/org/base/augmented_reality_core/: ExampleInstrumentedTest.java
android/libraries/augmented-reality-core/app/src/main/: AndroidManifest.xml
android/libraries/augmented-reality-core/app/src/main/java/org/base/augmented_reality_core/: ARCore.java
android/libraries/augmented-reality-core/app/src/main/res/values/: strings.xml
android/libraries/augmented-reality-core/app/src/test/java/org/base/augmented_reality_core/: ExampleUnitTest.java
base-doc/: README.md  angular.json  package.json
base-test/: compiler.ts  nodemon.json  package.json  tsconfig.json  typings.d.ts
builder/: info.json  package.json  tsconfig.json  tsconfig.root.json
builder-ui/: README.md  angular.json  build-shared.js  concentrate.js  detail-webpack.config.js  header-webpack.config.js  home-webpack.config.js  karma.conf.js  list-webpack.config.js  login-webpack.config.js  package.json
class/: README.md  package.json  tsconfig.json  webpack.config.js
cli/: .mocharc.yml  .nycrc.yml  package.json  tsconfig.json  typings.d.ts
core/: package.json  tsconfig.json  typings.d.ts
interfaces/: info.json  package.json
language-service/: package.json  (+1 more)
(+705 files in other folders)
